--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,21 @@
 {
-    "name": "dachcom-digital/lucene-search",
+    "name": "pringuin/pimcore-lucene-search",
     "type": "pimcore-bundle",
     "license": "GPL-3.0+",
-    "description": "Pimcore 5.x Website Indexer (powered by Zend Search Lucene)",
+    "description": "Pimcore 10.x Website Indexer (powered by Zend Search Lucene)",
     "keywords": ["pimcore", "search", "lucene"],
-    "homepage": "https://github.com/dachcom-digital/pimcore-lucene-search",
+    "homepage": "https://github.com/pringuin/pimcore-lucene-search",
     "authors": [
         {
             "name": "DACHCOM.DIGITAL Stefan Hagspiel",
             "email": "shagspiel@dachcom.ch",
             "homepage": "http://www.dachcom.com/",
+            "role": "Developer"
+        },
+        {
+            "name": "PRinguin",
+            "email": "kontakt@pringuin.de",
+            "homepage": "https://pringuin.de/",
             "role": "Developer"
         }
     ],
@@ -27,8 +33,8 @@
         }
     },
     "require": {
-        "pimcore/pimcore": "^5.8.0 | ^6.0.0",
-        "vdb/php-spider": "^0.3 | ^0.4",
+        "pimcore/pimcore": "^10.0.0",
+        "vdb/php-spider": "^0.6",
         "zf1/zend-search-lucene": "~1.12"
     }
 }
