Add ocramius dependency
Pimcore 10.5 removes that dependency but we rely on it.

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require": {
         "pimcore/pimcore": "^10.0.0",
         "vdb/php-spider": "^0.6",
-        "zf1/zend-search-lucene": "~1.12"
+        "zf1/zend-search-lucene": "~1.12",
+        "ocramius/package-versions": "^2.3"
     }
 }
